5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4063/executions/1602_1446.log
== TEST (2019-03-20 19:30:31) 
-- CODE:
Quantidade=int(input"litros de polpa de frutras")
Doar=float(input"dois tercos")
ficar=float(input"terca parte")
var= Quantidade / Doar * ficar
print round(varx, 3)
-- ERROR:
File "XXXX", line 1
    Quantidade=int(input"litros de polpa de frutras")
                                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:31:36) 
-- CODE:
Quantidade=int(input"litros de polpa de frutas")
Doar=float(input"dois tercos")
ficar=float(input"terca parte")
var= Quantidade / Doar * ficar
print round(var x, 3)
-- ERROR:
File "XXXX", line 1
    Quantidade=int(input"litros de polpa de frutas")
                                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:32:54) 
-- CODE:
Michael=int(input"litros de polpa de frutas")
Doar=float(input"dois tercos")
ficar=float(input"terca parte")
var= Michael / Doar * ficar
print round(michael x, 3)
-- ERROR:
File "XXXX", line 1
    Michael=int(input"litros de polpa de frutas")
                                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:33:01) 
-- CODE:
Michael=int(input"litros de polpa de frutas")
Doar=float(input"dois tercos")
ficar=float(input"terca parte")
var= Michael / Doar * ficar
print round(Michael x, 3)
-- ERROR:
File "XXXX", line 1
    Michael=int(input"litros de polpa de frutas")
                                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:35:31) 
-- CODE:
Quantidade=int(input("litros de polpa de frutas"))
ficar=Quantidade/3
print(round(ficar, 3)
-- ERROR:
File "XXXX", line 4
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:35:37) 
-- CODE:
Quantidade=int(input("litros de polpa de frutas"))
ficar=Quantidade/3
print(round(ficar, 3))
-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:35:45) 
-- CODE:
Quantidade=int(input("litros de polpa de frutas"))
ficar=Quantidade/3
print(round(ficar, 3))
-- EXECUTION TIME:
0.213241
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
2.333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:

-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
5.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:36:20) 
-- CODE:
Quantidade=float(input("litros de polpa de frutas"))
ficar=Quantidade/3
print(round(ficar, 3))
-- EXECUTION TIME:
0.123021
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
2.333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
6.667
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
5.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
